@@ -1,5 +1,11 @@
 2013-03-04  William A. Perkins  <william.perkins@pnnl.gov>
 
+	* scalars_source.f90 (scalar_source_timestep): update the
+	"const_series_rec" 
+
+	* temperature_source.f90 (temperature_source): use a
+	"const_series_rec" instead of a time_series_rec
+
 	* test/temperature/evaporation: a test for evaporation with
 	recharge 
 
